--- a/dummyBackend/vercel.json
+++ b/dummyBackend/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-      "index.js": {
+      "api/index.js": {
         "memory": 1024,
         "includeFiles": "db.json"
       }
@@ -8,7 +8,7 @@
     "rewrites": [
       {
         "source": "/(.*)",
-        "destination": "index.js"
+        "destination": "api/index.js"
       }
     ]
   }
