--- a/dummyBackend/package.json
+++ b/dummyBackend/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "dummyBackend",
+  "name": "dummy-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development node index.js",
-    "start": "NODE_ENV=production node index.js",
-    "watch": "json-server db.json --port=8000"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "clone": "^2.1.2",
     "json-serve": "^0.1.0",
     "json-server": "^0.17.3"
   }
